app/assets/stylesheets/bootstrap_and_customization.css.scss
@import url(http://fonts.googleapis.com/css?family=Lato:400,700);

$body-bg:                                   #ecf0f1;
$font-family-sans-serif:                    'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
$navbar-height:                             45px;
$navbar-default-bg:                          white;
$navbar-default-brand-color:     			 #E00714;
$brand-primary:                              #c0392b;
$jumbotron-bg:                                white;

@import "bootstrap-sprockets";
@import 'bootstrap';


#notice {
	color: red;
    margin-left: 3em;
    padding: 0;
    border: 0;
    font-size: 100%;
    vertical-align: baseline;
}


.jumbotron {
	margin-top: -2em;
}

.jumbotron p {
	font-size: 16px;
	font-family: 'Arial';
}


.jumbotron h2 {
	font-size: 30px;
	font-family: 'Stalemate', cursive;
	margin-bottom: 0.25em;
	text-align: center;
}

.jumbotron h3 {
	font-size: 30px;
	font-family: 'Electrolize', sans-serif;
	margin-bottom: 0.25em;
	text-align: center;
}

.center {
     text-align: center;
}

.navbar-brand {
     font-weight: bold;
}


.navbar-default {
    background-color: white;
    border-color: white;
}

#owl-demo .item img{
    display: block;
    width: 100%;
    height: auto;

}

.row {
	margin-top: 2em;
	margin-bottom: 1.5em;
}

.panel-default {
    border-color: white;
}

.panel-default > .panel-heading {
    background-color: white;
    border-color: white;
}


.title-index {
	color: red;
    font-size: 18px;
	font-family: 'Electrolize', sans-serif;
}

.title-show {
    color: red;
    font-size: 18px;
	font-family: 'Electrolize', sans-serif;
    display: -webkit-flexbox;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-align: center;
    -ms-flex-align: center;
    -webkit-align-items: center;
    align-items: center;
    justify-content: center;
}

.nav_item {
	margin-left: 25px;
	float: left;
}


.input_checkbox input {
	width: auto !important;
}

.dropdown-menu {
	    margin-left: 26%;
}


.parent {
    width: 50%;
    height: 100%;
    display: table;
    text-align: center;
    margin-left: 25%;
    margin-bottom: 3em;
}

.parent > .child {
    display: table-cell;
    vertical-align: middle;
}

.parent > .child a {
    vertical-align: middle;
    font-size: 16px;
	padding: 1px 15px;
	line-height: 18px;
	font-family: 'Electrolize', sans-serif;
}


.bann-strip {
  padding: 5em 0em 3em 0em;
    }

.bann-grid {
  float: left;
  width: 25%;
  padding: 0px 0px 0px 10px;
}

.responsive-container {
    background-color: white;
    max-width: 100%;
    margin: -100px auto 0px auto;
    padding: 100px 45px 100px 45px;
}


@media(max-width:1200px){
    .responsive-container  {
    width: 90%;
    margin: -100px auto 0px auto;
    padding: 100px 45px 100px 45px;
}   
}

@media(max-width:1024px){
	.responsive-container  {
    width: 90%;
    margin: -100px auto 0px auto;
    padding: 100px 45px 100px 45px;
}	
}

@media (min-width: 992px) {
.col-md-3 {
    width: 25%;
}
}

@media(max-width:768px){
.responsive-container {
	width: 720px;
    margin: -100px auto 0px auto;
    padding: 100px 45px 100px 45px;
}	
}


@media(max-width:640px){
.responsive-container  {
	width: 600px;
    margin: -100px auto 0px 0px;
    padding: 100px 45px 100px 45px;
}
}

@media(max-width:480px) {

.body {
    width: 480px;
}
.responsive-container  {
	width: 400px;
    margin: -100px auto 0px 0px;
    padding: 100px 45px 100px 45px;
}

.parent {
    margin-left: 5%;
}

.top-menu li {
    margin-left: -5%;

}

}

